# powdr-wasm

./: Cargo.toml  ISA.md  rust-toolchain.toml
extensions/autoprecompiles/src/: lib.rs
extensions/autoprecompiles/tests/apc_snapshots/complex/: comparison_chain.txt  comparison_equivalence.txt  cross_width_32_to_64.txt  cross_width_64_to_32.txt  div_and_mul_inverse.txt  div_chain.txt  i64load32u.txt  i64load_output_eq_base_addr.txt  i64load_output_plus_1_eq_base_addr.txt  mixed_comparisons.txt  mixed_signed_unsigned.txt  mul_chain.txt  mul_commutative.txt  same_register_not_optimized.txt  storeb_loadb_roundtrip.txt  storeb_roundtrip.txt  storeh_roundtrip.txt
extensions/autoprecompiles/tests/apc_snapshots/single_instructions/: add.txt  add_64.txt  add_imm.txt  add_imm_64.txt  and.txt  and_64.txt  and_imm.txt  and_imm_64.txt  call.txt  call_indirect.txt  const_32.txt  div.txt  div_64.txt  div_imm.txt  div_imm_64.txt  divu.txt  divu_64.txt  divu_imm.txt  divu_imm_64.txt  eq.txt  eq_64.txt  eq_imm.txt  eq_imm_64.txt  jump.txt  jump_if.txt  jump_if_zero.txt  loadb.txt  loadbu.txt  loadh.txt  loadhu.txt  loadw.txt  loadw_with_offset.txt  lt_s.txt  lt_s_64.txt  lt_u.txt  lt_u_64.txt  lt_u_imm.txt  mul.txt  mul_64.txt  mul_imm.txt  (+36 more)
extensions/crush-circuit/: Cargo.toml
extensions/crush-circuit/cuda/include/crush/adapters/: call.cuh
extensions/crush-circuit/src/: lib.rs  memory_config.rs  test_utils.rs
extensions/crush-circuit/src/adapters/: alu.rs  call.rs  jump.rs  loadstore.rs  mod.rs
extensions/crush-circuit/src/call/: core.rs  tracegen.rs
extensions/crush-circuit/src/const32/: air.rs  execution.rs
extensions/crush-circuit/src/eq/: core.rs
extensions/crush-circuit/src/extension/: cuda.rs  mod.rs  phantom.rs
extensions/crush-circuit/src/hintstore/: mod.rs
extensions/crush-circuit/src/jump/: core.rs
extensions/crush-circuit/src/loadstore/: execution.rs
extensions/crush-circuit/tests/: crush_constraints.txt
extensions/crush-translation/src/: instruction_builder.rs  lib.rs
extensions/openvm-transpiler/src/: instructions.rs
powdr-wasm/: Cargo.toml
powdr-wasm/src/: compile.rs  proving.rs
powdr-wasm/src/tests/: helpers.rs
